clean code and minor changes